Fix warning